--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -1,3 +1,65 @@
 .h{
-    width: auto;
+    height: 100vh;
+    display: flex;
+}
+.h-l{
+    flex: 1;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 200px;
+}
+.h-r{
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.lp{
+    width: 100vh;
+}
+.subh{
+    font-size: 25px;
+}
+.hw{
+    height: 50px;
+    width: 230px;
+    margin-top: 20px;
+    background-color:lime;
+    overflow: hidden;
+}
+.hli{
+    font-size: 30px;
+    list-style-type: none;
+    padding-top: 5px;
+}
+.hc{
+    animation: loop 10s ease-in-out alternate infinite;
+}
+@keyframes loop {
+    25%{
+        transform: translateY(-50px);
+    }
+    55%{
+        transform: translateY(-100px);
+    }
+    75%{
+        transform: translateY(-150px);
+    }
+    100%{
+        transform: translateY(-200px);
+    }
+    
+}
+.mq{
+    font-size: 20px;
+    color: red;
+}
+.hc:hover{
+    cursor: pointer;
+    animation-play-state: paused;
+}
+.hh{
+    color:blueviolet;
 }
